# melhoramais

./: .gitignore  .vercelignore  Dockerfile  MAPPING_RULES.md  create_admin_neon.py  ddl_pmgz.sql  docker-compose.yml  import_clientes.py  inspect_file.py  mapeamento_pmgz.md  nixpacks.toml  package-lock.json  pyproject.toml  railway.json  reset_admin_password.py  run_pmgz_migration.py  test.db  test_admin.py  teste_conexao.py  teste_motor.py  vercel.json
backend/: __init__.py  benchmark.py  create_all.py  create_schema.py  database.py  import_excel.py  import_genetics.py  main.py  migrate_add_animais_columns.py  migrate_add_arquivo_hash.py  migrate_add_benchmark_columns.py  migrate_add_constraint.py  migrate_add_new_tables.py  migrate_add_pmgz_columns.py  migrate_create_uploads_table.py  migrate_to_unified_v2.py  migrate_to_v2.py  models.py  models_pmgz.py  processor.py  processor_pmgz.py  report_generator.py  report_generator_v2.py  requirements.txt  schemas.py  seed.py  seed_mappings.py
backend/auth/: dependencies.py  router.py  security.py
backend/loaders/: __init__.py  base_loader.py  pmgz_loader.py
backend/routers/: __init__.py  animals.py  animals_v2.py  dashboard.py  farms.py  genetics_farms.py  migrate.py  reports.py  uploads.py
backend/scratch/: check_1528.py  check_ancp_exists.py  check_animals.py  check_columns_evals.py  check_constraints.py  check_evals.py  check_last_upload.py  check_type.py  (+10 more)
database/: ddl_genetics_v1.sql  genetics_mapping.md  schema.sql
frontend/: Dockerfile  package-lock.json  package.json
tests/: create_samples.py  verify.py
(+48 files in other folders)
